[package]
name = "temple"
version = "0.1.0"
authors = ["Christopher Miller <cmiller548@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
bevy_rapier2d = { version = "0.10.2", features = [ "simd-stable", "render" ] }
kurinji = { git = "https://github.com/jacobjenks/kurinji", branch = "upgrade_bevy_0.5" }
bevy_tilemap = "0.4"
bevy_easings = "0.4.0"
bevy_egui = "0.4"
toml = "0.5.8"
serde = "1.0.126"
png = "0.16.8"
log = "0.4.14"
env_logger = "0.8.4"
clap = "2.33.3"
console = "0.14.1"
dialoguer = "0.8.0"

[build-dependencies]
chrono = "0.4"

[profile.dev]
opt-level = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3
codegen-units = 1

[profile.release]
opt-level = 3
codegen-units = 1

[features]
debug = []
