[package]
name = "temple"
version = "0.1.0"
authors = ["Christopher Miller <cmiller548@gmail.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.5.0", default-features = false, features = ["bevy_dynamic_plugin", "bevy_gilrs", "bevy_winit", "render", "png", "hdr", "x11"] }
bevy_rapier2d = { version = "^0.11", features = [ "simd-stable" ] }
kurinji = { git = "https://github.com/ChristopherJMiller/kurinji", branch = "upgrade_bevy_0.5" }
bevy_egui = "^0.7"
toml = "^0.5"
serde = "^1.0"
png = "^0.16"
log = "^0.4"
env_logger = "^0.8"
clap = "^2.33"
console = "^0.14"
dialoguer = "^0.8"
bevy_kira_audio = { version = "0.6", features = ["wav"] }

[build-dependencies]
chrono = "^0.4"

[patch.crates-io]
bevy-glsl-to-spirv = { git = "https://github.com/realliance/glsl-to-spirv.git" }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1

[features]
debug = ["bevy/trace"]
