[package]
name = "temple"
version = "0.1.0"
authors = ["Christopher Miller <hello@chrismiller.xyz>"]
edition = "2021"

[dependencies]
bevy = { version = "0.6.0", default-features = false, features = ["bevy_dynamic_plugin", "bevy_gilrs", "bevy_winit", "render", "png", "hdr", "x11"] }
bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", rev = "11605d04", features = ["simd-stable"] }
kurinji = { git = "https://github.com/ChristopherJMiller/kurinji" }
bevy_egui = "^0.10"
bevy_kira_audio = { version = "0.8", features = ["wav"] }
toml = "^0.5"
serde = "^1.0"
png = "^0.16"
log = "^0.4"
env_logger = "^0.8"
clap = "^2.33"
console = "^0.14"
dialoguer = "^0.8"
rmp-serde = "0.15"
const_format = "0.2.22"
pulldown-cmark = "0.9.1"

[build-dependencies]
chrono = "^0.4"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1

[features]
debug = ["bevy/trace"]
devrootpath = []
